# proxistry

./: AGENTS.md  CACHE.md  Cargo.toml  Dockerfile  README.md  config.example.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  main.rs  server.rs
src/cache/: inflight.rs  key.rs  manager.rs  mod.rs  storage.rs
src/middleware/: logging.rs
src/proxy/: client.rs  handler.rs  mod.rs  rewrite.rs
src/registry/: auth.rs  routing.rs
