[package]
name = "proxistry"
description = "A Docker Registry Proxy Service"
version = "0.1.5"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "signal", "parking_lot"] }
reqwest = { version = "0.13.2", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1"
http-body-util = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
parking_lot = "0.12"
humantime-serde = "1"
humantime = "2"
async-recursion = "1"
dirs-sys = "0.5.0"
percent-encoding = "2.3.2"
regex = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
